<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Actvities.CreditsActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="8dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:title="@string/credit"
        app:titleTextColor="@color/colorActionbarTitile"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/card_elevation"
        app:cardCornerRadius="@dimen/card_cornner_rad"
        android:layout_margin="@dimen/card_bottom_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/glide_title"
            android:textColor="@color/colorTitle"
            android:textSize="@dimen/card_title_size"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/colorAccent"
            android:layout_margin="@dimen/line_marin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/glide_license"
            android:textSize="@dimen/card_desc_size"/>
    </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/retrofit_title"
                android:textColor="@color/colorTitle"
                android:textSize="@dimen/card_title_size"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:background="@color/colorAccent"
                android:layout_margin="@dimen/line_marin"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/retrofit_lic"
                android:textSize="@dimen/card_desc_size"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>